set(CMAKE_AUTOMOC OFF)

add_subdirectory(Agilent)
add_subdirectory(Arduino)
if(CMSTKMODLAB_ASSEMBLY OR CMSTKMODLAB_DEFO)
	add_subdirectory(Canon)
endif()
add_subdirectory(Conrad)
add_subdirectory(Cori)
add_subdirectory(Greisinger)
add_subdirectory(Hameg)
add_subdirectory(Huber)
add_subdirectory(Iota)
add_subdirectory(Julabo)
add_subdirectory(Keithley)
add_subdirectory(Keyence)
add_subdirectory(Lang)
add_subdirectory(Leybold)
add_subdirectory(Marta)
add_subdirectory(Nanotec)
add_subdirectory(Pfeiffer)
add_subdirectory(RohdeSchwarz)
add_subdirectory(Velleman)
